--- a/style.css
+++ b/style.css
@@ -9,4 +9,7 @@ This theme, is licensed under the GPL.
 */
 @import url('//cdn.kalamangga.net/pustaka/bootstrap/v3.0.0/css/bootstrap.min.css');
 @import url('//cdn.kalamangga.net/pustaka/bootstrap/v3.0.0/css/bootstrap-theme.min.css');
-
+body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
