--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ Text Domain: lifeteen-wpthemes
 
 This theme, is licensed under the GPL.
 */
-@import url('//cdn.kalamangga.net/pustaka/bootstrap/v3.0.0/css/bootstrap.min.css');
-@import url('//cdn.kalamangga.net/pustaka/bootstrap/v3.0.0/css/bootstrap-theme.min.css');
+@import url('bootstrap/css/bootstrap.css');
+@import url('bootstrap/css/bootstrap-responsive.css');
+
 body {
 	padding-top: 60px;
 	padding-bottom: 40px;
